tests/compile-fail/no-input.stderr
error: unexpected end of input, expected literal
 --> $DIR/no-input.rs:2:5
  |
2 |     fixed_macro::fixed!();
  |     ^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
